# ToDoList

./: .gitignore  CMakeLists.txt  main.cpp  spec.txt  startup.sh  tasks.txt
src/: disk_operations.cpp  disk_operations.h
